Stop QR code from overflowing on questionnaire details page

--- a/less/app/questionnaires.less
+++ b/less/app/questionnaires.less
@@ -42,3 +42,9 @@
         }
     }
 }
+
+.questionnaire{
+    img.qr{
+        max-width: 100%;
+    }
+}
