--- a/public/app/app/css/app-rtl.css
+++ b/public/app/app/css/app-rtl.css
@@ -13516,6 +13516,10 @@ flatdoc .button .badge {
   font-size: 22px;
 }
 
+.questionnaire img.qr {
+  max-width: 100%;
+}
+
 .public {
   font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
